--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "moment": "^2.29.1",
-    "moment-timezone": "^0.5.32",
     "next": "^10.0.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react": "^17.0.1"
   }
 }
